--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import Navigation from '../components/Navigation.astro';
+import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import '../styles/global.css';
 const pageTitle = "Home Page";
@@ -14,8 +14,8 @@ const pageTitle = "Home Page";
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<Navigation />
-		 <h1>{pageTitle}</h1>
-		 <Footer />
+		<Header />
+		<h1>{pageTitle}</h1>
+		<Footer />
 	</body>
 </html>
