--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -14,6 +14,7 @@ import Social from './Social.astro';
   <Social platform="twitter" username="astrodotbuild" />
   <Social platform="github" username="withastro" />
   <Social platform="youtube" username="astrodotbuild" />
+  <slot />
 </footer>
 <script>
   import "../scripts/menu.js";
