--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,7 +1,9 @@
 ---
+import Button from "./Button.astro"
 ---
 <div class="nav-links">
-<a href="/">Home</a>
-<a href="/about/">About</a>
-<a href="/blog/">Blog</a>
+<a class="btn btn-xl btn-ghost btn-secondary" href="/">Home</a>
+<a class="btn btn-primary" href="/about/">About</a>
+<a class="btn btn-accent" href="/blog/">Blog</a>
+<Button size="xl" type="primary">Test</Button>
 </div>
