--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,10 +1,10 @@
 ---
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
-import '../styles/global.css';
+import "../assets/app.css";
 const { pageTitle } = Astro.props;
 ---
-<html lang="en">
+<html lang="en" data-theme="cyberpunk">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
@@ -16,7 +16,7 @@ const { pageTitle } = Astro.props;
     <Header />
     <h1>{pageTitle}</h1>
     <slot />
-    <Footer />
+    <Footer>This would go into your slot.</Footer>
     <script>
       import "../scripts/menu.js";
     </script>
